# fmdk-fabutils

./: README.md  pyproject.toml
data/: python_solution_config.xlsx  solution_config.xlsx  spark_python_solution_config.xlsx
docs/diagrams/: conceptual.excalidraw
docs/markdown/: AGENT.md
notebooks/python/: nb_01_python_compute_config_demo.ipynb  nb_01_solution_from_config.ipynb  nb_02_01_python_create_solution_from_config.ipynb  nb_02_02_git_import_test.ipynb  nb_02_demo.ipynb  nb_03_spark_udf_with_arrow.ipynb  nb_04_read_csv.ipynb  nb_generate_sample_data.ipynb  nb_master_dag.ipynb
src/fabutils/: common.py  fileutils.py  logutils.py
