[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fabutils"
version = "0.9.0"
description = "A libray of shared utility code for Python and PySpark notebooks in Fabric"
readme = "README.md"
requires-python = ">= 3.11.8"
dependencies = [
    "openpyxl",
    "pandas",
    "polars",
    "pyarrow",
    "pydantic",
    "python-dotenv",
    "pyyaml",

]

[dependency-groups]
dev = [
    "duckdb",
    "dummy-notebookutils>=1.5.4",
    "isort",
    "jupyterlab",
    "mypy",
    "pyspark",
    "semantic-link-labs>=0.12.6",
    "semantic-link-sempy>=0.12.2",
]

# Ruff formatting
[tool.ruff]
line-length = 100

# Import sorting
[tool.isort]
profile = "ruff"
line_length = 100

# Type checking
[tool.mypy]
python_version = "3.11.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Setup
[tool.setuptools.packages.find]
where = ["src"]


